# ter

./: CMakeLists.txt
header_files/: EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
resource_files/Shaders/: default.frag  default.vert
source_files/: EBO.cpp  Textures.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
